--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="E-store : happy shopping trip">
+  <meta name="keywords" content="clothes, accessories">
   <link rel="shortcut icon" href="img/F.png" type="image/x-icon">
   <title>e-store</title>
   <!-- bootstrap -->
